[package]
name = "atomicwrites"
version = "0.4.0"

authors = ["Markus Unterwaditzer <markus-honeypot@unterwaditzer.net>"]
license = "MIT"
keywords = ["filesystem", "posix"]
readme = "README.md"

description = "Atomic file-writes."
documentation = "https://docs.rs/crate/atomicwrites"
homepage = "https://github.com/untitaker/rust-atomicwrites"
repository = "https://github.com/untitaker/rust-atomicwrites"

exclude = ["/.travis.yml", "/Makefile", "/appveyor.yml"]

[dependencies]
tempfile = "3.4"

[target.'cfg(unix)'.dependencies]
rustix = { version = "0.36.0", features = ["fs"] }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.45.0"
features = ["Win32_Foundation", "Win32_Storage_FileSystem"]
